--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,8 +12,7 @@ fastapi = {extras = ["standard"], version = "^0.112.0"}
 sqlalchemy = "^2.0.32"
 pydantic = "^2.8.2"
 pydantic-settings = "^2.4.0"
-psycopg2 = "^2.9.9"
-
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
