--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -6,11 +6,9 @@ name: Docker
 # documentation.
 
 on:
-  schedule:
-    - cron: '17 5 * * *'
   push:
     branches: [ "master" ]
-    # Publish semver tags as releases.
+    # Publish sever tags as releases.
     tags: [ 'v*.*.*' ]
   pull_request:
     branches: [ "master" ]
@@ -76,19 +74,8 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      # Build and push Docker image with Buildx (don't push on PR)
+      # Build and push Docker image (don't push on PR)
       # https://github.com/docker/build-push-action
-      # - name: Build and push Docker image
-      # id: build-and-push
-      # uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
-      # with:
-      #    context: .
-      #    platforms: linux/amd64,linux/arm64
-      #    push: ${{ github.event_name != 'pull_request' }}
-      #    tags: ${{ steps.meta.outputs.tags }}
-      #    labels: ${{ steps.meta.outputs.labels }}
-      #    cache-from: type=gha
-      #    cache-to: type=gha,mode=max
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
@@ -113,5 +100,4 @@ jobs:
           DIGEST: ${{ steps.build-and-push.outputs.digest }}
         # This step uses the identity token to provision an ephemeral certificate
         # against the sigstore community Fulcio instance.
-        # run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}@${DIGEST}
         run: echo "${TAGS}" | xargs -I {} cosign sign --yes {}
